# CHPS0801

./: README.MD  env_modules
kokkos/: Makefile  common.cmake  jacobi_it.pgr  (+4 more)
kokkos/CPU/jacobi/: CMakeLists.txt  cpu_parallel_jacobi.cpp
kokkos/CPU/jacobi/build-cpu/: CMakeCache.txt  Makefile  cmake_install.cmake  kokkos_jacobi
kokkos/parallel/gauss_seidel/: CMakeLists.txt  parallel_gauss_seidel.cpp  parallel_wave_gauss_seidel.cpp
kokkos/parallel/gauss_seidel/build-cpu/: CMakeCache.txt  Makefile  cmake_install.cmake  kokkos_gauss_seidel
kokkos/parallel/gauss_seidel/build-cpu/Kokkos/: CTestTestfile.cmake  DartConfiguration.tcl  KokkosConfigCommon.cmake  Makefile  cmake_install.cmake
kokkos/parallel/gauss_seidel/build-cpu/Kokkos/algorithms/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/parallel/gauss_seidel/build-cpu/Kokkos/algorithms/src/: CTestTestfile.cmake  Makefile
kokkos/parallel/gauss_seidel/build-cpu/Kokkos/containers/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/parallel/gauss_seidel/build-cpu/Kokkos/containers/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/parallel/gauss_seidel/build-cpu/Kokkos/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/parallel/gauss_seidel/build-cpu/Kokkos/core/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/parallel/gauss_seidel/build-cpu/Kokkos/example/: CTestTestfile.cmake  Makefile
kokkos/parallel/gauss_seidel/build-gpu/: CMakeCache.txt  Makefile  cmake_install.cmake
kokkos/parallel/gauss_seidel/build-gpu/Kokkos/: CTestTestfile.cmake  DartConfiguration.tcl  KokkosCore_config.h  Makefile  cmake_install.cmake
kokkos/parallel/gauss_seidel/build-gpu/Kokkos/algorithms/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/parallel/gauss_seidel/build-gpu/Kokkos/algorithms/src/: CTestTestfile.cmake  Makefile
kokkos/parallel/gauss_seidel/build-gpu/Kokkos/containers/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/parallel/gauss_seidel/build-gpu/Kokkos/containers/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/parallel/gauss_seidel/build-gpu/Kokkos/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/parallel/gauss_seidel/build-gpu/Kokkos/example/: CTestTestfile.cmake  Makefile
kokkos/parallel/gauss_seidel/build-gpu/Kokkos/temp/: KokkosCore_Config_DeclareBackend.hpp.work
kokkos/parallel/jacobi/: CMakeLists.txt  parallel_jacobi.cpp
kokkos/parallel/jacobi/build-cpu/: CMakeCache.txt  Makefile  cmake_install.cmake  kokkos_jacobi
kokkos/parallel/jacobi/build-cpu/Kokkos/: CTestTestfile.cmake  DartConfiguration.tcl  KokkosConfig.cmake  KokkosConfigCommon.cmake  KokkosCore_config.h  Makefile  cmake_install.cmake
kokkos/parallel/jacobi/build-cpu/Kokkos/algorithms/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/parallel/jacobi/build-cpu/Kokkos/containers/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/parallel/jacobi/build-cpu/Kokkos/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/parallel/jacobi/build-cpu/Kokkos/example/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/parallel/jacobi/build-cpu/Kokkos/temp/: kokkos_launch_compiler
kokkos/parallel/jacobi/build-gpu/: CMakeCache.txt  Makefile  cmake_install.cmake  kokkos_jacobi
kokkos/parallel/jacobi/build-gpu/Kokkos/: CTestTestfile.cmake  DartConfiguration.tcl  KokkosConfig.cmake  KokkosConfigCommon.cmake  Makefile  cmake_install.cmake
kokkos/parallel/jacobi/build-gpu/Kokkos/algorithms/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/parallel/jacobi/build-gpu/Kokkos/containers/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/parallel/jacobi/build-gpu/Kokkos/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/parallel/jacobi/build-gpu/Kokkos/example/: CTestTestfile.cmake  Makefile
kokkos/parallel/jacobi/build-gpu/Kokkos/temp/: KokkosCore_Config_FwdBackend.hpp.work  KokkosCore_Config_SetupBackend.hpp.work  kokkos_launch_compiler
(+29 files in other folders)
